Closed Bug 604078 Opened 15 years ago Closed 15 years ago

Two comparisons between signed and unsigned integers in nsTextFrame::PeekOffsetCharacter

Categories

(Core :: DOM: Selection, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b8

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

Attached patch Patch v1Splinter Review
Ehsan, you introduced these warnings.
Flags: in-testsuite-
Attachment #482895 - Flags: review?
Attachment #482895 - Flags: review? → review?(ehsan)
Comment on attachment 482895 [details] [diff] [review] Patch v1 Thanks for catching this!
Attachment #482895 - Flags: review?(ehsan) → review+
Attachment #482895 - Flags: approval2.0?
Attachment #482895 - Flags: approval2.0? → approval2.0+
Temporarily assigning this to me until I land the patch, at which point I'll assign it back to Ms2ger.
Assignee: Ms2ger → ehsan
Whiteboard: [build_warning] → [build_warning][needs landing]
Assignee: ehsan → Ms2ger
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [build_warning][needs landing] → [build_warning]
Target Milestone: --- → mozilla2.0b8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: