Bug 604078 - Two comparisons between signed and unsigned integers in nsTextFrame::PeekOffsetCharacter; r=ehsan a=bsmedberg